--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <head>
   <title>Nick Gamble</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <style>
+    body { padding: 10px; font-size: 1.2em; }
+    * { font-family: 'Dosis', cursive; }
+  </style>
 </head>
 <body>
-  <h1>Nick Gamble</h1>
+  <h1>Gamble, Nick</h1>
+
+  <h4>Are you bored?</h4>
+  <ul>
+    <li><a href="https://beta.refory.com" rel="nofollow">Decide the world's favorite everything.</a></li>
+    <li><a href="/narcissist">Find out if you're a narcissist.</a></li>
+  </ul>
+
+  <h4>Are you a stalker?</h4>
+  <ul>
+    <li><a href="www.linkedin.com/in/nickgamble" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/nrgamble" target="_blank">Github</a></li>
+  </ul>
+
 </body>
 </html>
