--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     body { padding: 10px; font-size: 1.2em; }
     * { font-family: 'Dosis', cursive; }
   </style>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-1476842-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 <body>
   <h1>Gamble, Nick</h1>
 
   <h4>Are you bored?</h4>
   <ul>
-    <li><a href="https://beta.refory.com" rel="nofollow">Decide the world's favorite everything.</a></li>
+    <li><a href="https://www.refory.com" rel="nofollow">Decide the world's favorite everything.</a></li>
     <li><a href="/narcissist">Find out if you're a narcissist.</a></li>
   </ul>
 
