update ui, info

--- a/narcissist/index.html
+++ b/narcissist/index.html
@@ -26,10 +26,10 @@
   <h1>Are you a narcissist?</h1>
   <p>
     If you need to use this tool to know whether or not you are a narcissistic writer, you probably are.
-    In which case, you'll probably be interested to know just how narcissistic you are...you fucking narcissist.
+    In which case, you'll probably be interested to know just how narcissistic you are...you narcissist.
   </p>
   <p>
-    If you genuinely don't know how narcissistic your writing is and wonder how you may be perceived by your audience, enter any text you've writen for analysis.  The higher the score, the more of a fucking narcissist you are.
+    If you genuinely don't know how narcissistic your writing is and wonder how you may be perceived by your audience, enter any text you've writen for analysis.  The higher the score, the more of a narcissist you are.
   </p>
   <!-- <p>
     Disclaimer: this is not an exact science.  It does not take into account the number of mirror selfies you've taken.
